# pixbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  configure.sh  debug.sh  gdb.sh  release.sh  win_debug.sh
src/: cell.h  color.c  color.h  game_context.h  grid.c  grid.h  main.c  material.c  material.h  material_selector.c  material_selector.h  performance_stats.h  point.h  render.c  render.h  rules.c  rules.h  simulation.c  simulation.h
src/materials/: acid.c  fire.c  ice.c  oil.c  sand.c  smoke.c  water.c  wood.c
